# symtrain-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
data/processed/: df.csv
notebooks/: extract.ipynb  test.ipynb
src/symtrain/: __init__.py  config.py
src/symtrain/clustering/: __init__.py  kmeans.py
src/symtrain/embeddings/: __init__.py  distilbert.py
src/symtrain/llm/: categorize.py  few_shot.py
src/symtrain/search/: similarity.py
symtrain-image/: IMPROVEMENTS.md  QUICK_START.md  app.py  check_image_formats.py  demo_vision_mapping.py  diagnostic_semantic.py  requirements.txt  test_improved_matching.py  test_vision_mapping.py  utils.py  vision_mapper.py  vision_mapping_report.txt  vision_mapping_results.json
symtrain-image/.streamlit/: config.toml
v1/app/: main.py
v1/notebooks/: extract.ipynb
v1/src/symtrain/: __init__.py
v1/src/symtrain/clustering/: kmeans.py
v1/src/symtrain/data/: __init__.py  loader.py
v1/src/symtrain/embeddings/: distilbert.py
v1/src/symtrain/llm/: __init__.py  client.py
v1/src/symtrain/search/: __init__.py
